tests/ui/borrowck/borrowck-borrow-mut-object-twice.stderr
error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/borrowck-borrow-mut-object-twice.rs:13:5
   |
LL |     let y = x.f1();
   |             ------ first mutable borrow occurs here
LL |     x.f2();
   |     ^^^^^^ second mutable borrow occurs here
LL |     y.use_ref();
   |     ----------- first borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
